Fix navbar being hidden on mobile in some cases. Closes #5568

--- a/bigbluebutton-html5/imports/ui/components/app/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/app/styles.scss
@@ -1,6 +1,6 @@
 @import "/imports/ui/stylesheets/variables/_all";
 
-$navbar-height: 65px; // TODO: Change to NavBar real height
+$navbar-height: 63px; // TODO: Change to NavBar real height
 $actionsbar-height: 75px; // TODO: Change to ActionsBar real height
 $bars-padding: $lg-padding-x - .45rem; // -.45 so user-list and chat title is aligned with the presentation title
 
@@ -103,9 +103,6 @@ $bars-padding: $lg-padding-x - .45rem; // -.45 so user-list and chat title is al
 
   @include mq($small-only) {
     padding-top: $navbar-height;
-    padding-top: $navbar-height;
-    height: 100vh;
-    width: 100vw;
   }
 
   @include mq($medium-up) {
@@ -136,9 +133,6 @@ $bars-padding: $lg-padding-x - .45rem; // -.45 so user-list and chat title is al
   @include mq($small-only) {
     z-index: 3;
     padding-top: $navbar-height;
-    padding-top: $navbar-height;
-    height: 100vh;
-    width: 100vw;
   }
 
   @include mq($medium-up) {
